<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity"
    android:orientation="vertical"
    android:background="#EFF0FC"
    android:padding="20dp"
    android:gravity="center">


    <TextView
        android:id="@+id/home_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_title"
        android:textAlignment="center"
        android:textStyle="bold"
        style="@style/Animation.Design.BottomSheetDialog"
        tools:ignore="RtlCompat" />

    <TextView
        android:id="@+id/sub_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_sub_title"
        android:textStyle="bold"
        android:textAlignment="center"
        android:gravity="center_horizontal" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_logout"
        android:textStyle="bold"
        android:textSize="18dp"
        style="@style/TextAppearance.AppCompat.Widget.ActionBar.Menu"
        android:layout_marginTop="15dp"/>




</LinearLayout>